--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en-US">
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -13,8 +11,10 @@
 <body>
     <!-- Question 0 (The Intro) -->
     <form id="intro">
-        <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
-        <input type="submit" value="Continue">
+        <div id="intro">
+            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
+            <input type="submit" value="Continue">
+        </div>
     </form>
 
     <!-- Question 1 -->
