Add first question

--- a/index.html
+++ b/index.html
@@ -11,15 +11,36 @@
 <body>
     <!-- Question 0 (The Intro) -->
     <form id="intro">
-        <div id="intro">
-            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
-            <input type="submit" value="Continue">
-        </div>
+        <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
+        <input type="submit" value="Continue">
     </form>
 
     <!-- Question 1 -->
-    <form id="question1">
-        <p>question 1</p>
+    <form id="q1">
+        <h2>Question 1:</h2>
+        <h3>What's your favorite color?</h3>
+        <!-- radio 1 -->
+        <input type="radio" value="red" id="red">
+        <label for="red">Red</label>
+        <!-- radio 2 -->
+        <input type="radio" value="blue" id="blue">
+        <label for="blue">Blue</label>
+        <!-- radio 3 -->
+        <input type="radio" value="smaragdine" id="smaragdine">
+        <label for="smaragdine">Smaragdine</label>
+        <!-- radio 4 -->
+        <input type="radio" value="redagain" id="redagain">
+        <label for="redagain">Red Again</label>
+        <!-- radio 5 -->
+        <input type="radio" value="yes" id="yes">
+        <label for="yes">Yes</label>
+        <!-- radio 6 -->
+        <input type="radio" value="no" id="no">
+        <label for="no">No</label>
+        <!-- radio 7 -->
+        <input type="radio" value="idk" id="idk">
+        <label for="idk">I don't understand</label>
+        <input type="submit" value="Next">
     </form>
 </body>
 
