Add functionality for every questions transitions

--- a/index.html
+++ b/index.html
@@ -17,31 +17,148 @@
 
     <!-- Question 1 -->
     <form id="q1">
-        <h2>Question 1:</h2>
-        <h3>What's your favorite color?</h3>
+        <h2>Question 1</h2>
+        <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="red" id="red">
-        <label for="red">Red</label>
+        <input type="radio" value="1" id="1">
+        <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="blue" id="blue">
-        <label for="blue">Blue</label>
+        <input type="radio" value="2" id="2">
+        <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="smaragdine" id="smaragdine">
-        <label for="smaragdine">Smaragdine</label>
+        <input type="radio" value="3" id="3">
+        <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="redagain" id="redagain">
-        <label for="redagain">Red Again</label>
+        <input type="radio" value="4" id="4">
+        <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="yes" id="yes">
-        <label for="yes">Yes</label>
+        <input type="radio" value="5" id="5">
+        <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="no" id="no">
-        <label for="no">No</label>
+        <input type="radio" value="6" id="6">
+        <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="idk" id="idk">
-        <label for="idk">I don't understand</label>
-        <input type="submit" value="Next">
+        <input type="radio" value="7" id="7">
+        <label for="7">7</label>
+        <button type="submit">Next</button>
     </form>
+
+    <!-- Question 2 -->
+    <form id="q2">
+        <h2>Question 2</h2>
+        <h3>Prompt?</h3>
+        <!-- radio 1 -->
+        <input type="radio" value="1" id="1">
+        <label for="1">1</label>
+        <!-- radio 2 -->
+        <input type="radio" value="2" id="2">
+        <label for="2">2</label>
+        <!-- radio 3 -->
+        <input type="radio" value="3" id="3">
+        <label for="3">3</label>
+        <!-- radio 4 -->
+        <input type="radio" value="4" id="4">
+        <label for="4">4</label>
+        <!-- radio 5 -->
+        <input type="radio" value="5" id="5">
+        <label for="5">5</label>
+        <!-- radio 6 -->
+        <input type="radio" value="6" id="6">
+        <label for="6">6</label>
+        <!-- radio 7 -->
+        <input type="radio" value="7" id="7">
+        <label for="7">7</label>
+        <button type="submit">Next</button>
+    </form>
+
+    <!-- Question 3 -->
+    <form id="q3">
+        <h2>Question 3</h2>
+        <h3>Prompt?</h3>
+        <!-- radio 1 -->
+        <input type="radio" value="1" id="1">
+        <label for="1">1</label>
+        <!-- radio 2 -->
+        <input type="radio" value="2" id="2">
+        <label for="2">2</label>
+        <!-- radio 3 -->
+        <input type="radio" value="3" id="3">
+        <label for="3">3</label>
+        <!-- radio 4 -->
+        <input type="radio" value="4" id="4">
+        <label for="4">4</label>
+        <!-- radio 5 -->
+        <input type="radio" value="5" id="5">
+        <label for="5">5</label>
+        <!-- radio 6 -->
+        <input type="radio" value="6" id="6">
+        <label for="6">6</label>
+        <!-- radio 7 -->
+        <input type="radio" value="7" id="7">
+        <label for="7">7</label>
+        <button type="submit">Next</button>
+    </form>
+
+    <!-- Question 4 -->
+    <form id="q4">
+        <h2>Question 4</h2>
+        <h3>Prompt?</h3>
+        <!-- radio 1 -->
+        <input type="radio" value="1" id="1">
+        <label for="1">1</label>
+        <!-- radio 2 -->
+        <input type="radio" value="2" id="2">
+        <label for="2">2</label>
+        <!-- radio 3 -->
+        <input type="radio" value="3" id="3">
+        <label for="3">3</label>
+        <!-- radio 4 -->
+        <input type="radio" value="4" id="4">
+        <label for="4">4</label>
+        <!-- radio 5 -->
+        <input type="radio" value="5" id="5">
+        <label for="5">5</label>
+        <!-- radio 6 -->
+        <input type="radio" value="6" id="6">
+        <label for="6">6</label>
+        <!-- radio 7 -->
+        <input type="radio" value="7" id="7">
+        <label for="7">7</label>
+        <button type="submit">Next</button>
+    </form>
+
+    <!-- Question 5 -->
+    <form id="q5">
+        <h2>Question 5</h2>
+        <h3>Prompt?</h3>
+        <!-- radio 1 -->
+        <input type="radio" value="1" id="1">
+        <label for="1">1</label>
+        <!-- radio 2 -->
+        <input type="radio" value="2" id="2">
+        <label for="2">2</label>
+        <!-- radio 3 -->
+        <input type="radio" value="3" id="3">
+        <label for="3">3</label>
+        <!-- radio 4 -->
+        <input type="radio" value="4" id="4">
+        <label for="4">4</label>
+        <!-- radio 5 -->
+        <input type="radio" value="5" id="5">
+        <label for="5">5</label>
+        <!-- radio 6 -->
+        <input type="radio" value="6" id="6">
+        <label for="6">6</label>
+        <!-- radio 7 -->
+        <input type="radio" value="7" id="7">
+        <label for="7">7</label>
+        <button type="submit">Next</button>
+    </form>
+    <!-- RESULTS -->
+    <form id="results">
+        <p>results</p>
+    </form>
+
 </body>
 
 </html>
