Now pull user input from radio buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Question 0 (The Intro) -->
     <form id="intro">
         <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
-        <input type="submit" value="Continue">
+        <input type="submit" value="Next">
     </form>
 
     <!-- Question 1 -->
@@ -20,25 +20,25 @@
         <h2>Question 1</h2>
         <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="1" id="1">
+        <input type="radio" value="1" id="1" name="q1">
         <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="2" id="2">
+        <input type="radio" value="2" id="2" name="q1">
         <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="3" id="3">
+        <input type="radio" value="3" id="3" name="q1">
         <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="4" id="4">
+        <input type="radio" value="4" id="4" name="q1">
         <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="5" id="5">
+        <input type="radio" value="5" id="5" name="q1">
         <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="6" id="6">
+        <input type="radio" value="6" id="6" name="q1">
         <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="7" id="7">
+        <input type="radio" value="7" id="7" name="q1">
         <label for="7">7</label>
         <button type="submit">Next</button>
     </form>
@@ -48,25 +48,25 @@
         <h2>Question 2</h2>
         <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="1" id="1">
+        <input type="radio" value="1" id="1" name="q2">
         <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="2" id="2">
+        <input type="radio" value="2" id="2" name="q2">
         <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="3" id="3">
+        <input type="radio" value="3" id="3" name="q2">
         <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="4" id="4">
+        <input type="radio" value="4" id="4" name="q2">
         <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="5" id="5">
+        <input type="radio" value="5" id="5" name="q2">
         <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="6" id="6">
+        <input type="radio" value="6" id="6" name="q2">
         <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="7" id="7">
+        <input type="radio" value="7" id="7" name="q2">
         <label for="7">7</label>
         <button type="submit">Next</button>
     </form>
@@ -76,25 +76,25 @@
         <h2>Question 3</h2>
         <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="1" id="1">
+        <input type="radio" value="1" id="1" name="q3">
         <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="2" id="2">
+        <input type="radio" value="2" id="2" name="q3">
         <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="3" id="3">
+        <input type="radio" value="3" id="3" name="q3">
         <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="4" id="4">
+        <input type="radio" value="4" id="4" name="q3">
         <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="5" id="5">
+        <input type="radio" value="5" id="5" name="q3">
         <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="6" id="6">
+        <input type="radio" value="6" id="6" name="q3">
         <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="7" id="7">
+        <input type="radio" value="7" id="7" name="q3">
         <label for="7">7</label>
         <button type="submit">Next</button>
     </form>
@@ -104,25 +104,25 @@
         <h2>Question 4</h2>
         <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="1" id="1">
+        <input type="radio" value="1" id="1" name="q4">
         <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="2" id="2">
+        <input type="radio" value="2" id="2" name="q4">
         <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="3" id="3">
+        <input type="radio" value="3" id="3" name="q4">
         <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="4" id="4">
+        <input type="radio" value="4" id="4" name="q4">
         <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="5" id="5">
+        <input type="radio" value="5" id="5" name="q4">
         <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="6" id="6">
+        <input type="radio" value="6" id="6" name="q4">
         <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="7" id="7">
+        <input type="radio" value="7" id="7" name="q4">
         <label for="7">7</label>
         <button type="submit">Next</button>
     </form>
@@ -132,31 +132,31 @@
         <h2>Question 5</h2>
         <h3>Prompt?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="1" id="1">
+        <input type="radio" value="1" id="1" name="q5">
         <label for="1">1</label>
         <!-- radio 2 -->
-        <input type="radio" value="2" id="2">
+        <input type="radio" value="2" id="2" name="q5">
         <label for="2">2</label>
         <!-- radio 3 -->
-        <input type="radio" value="3" id="3">
+        <input type="radio" value="3" id="3" name="q5">
         <label for="3">3</label>
         <!-- radio 4 -->
-        <input type="radio" value="4" id="4">
+        <input type="radio" value="4" id="4" name="q5">
         <label for="4">4</label>
         <!-- radio 5 -->
-        <input type="radio" value="5" id="5">
+        <input type="radio" value="5" id="5" name="q5">
         <label for="5">5</label>
         <!-- radio 6 -->
-        <input type="radio" value="6" id="6">
+        <input type="radio" value="6" id="6" name="q5">
         <label for="6">6</label>
         <!-- radio 7 -->
-        <input type="radio" value="7" id="7">
+        <input type="radio" value="7" id="7" name="q5">
         <label for="7">7</label>
         <button type="submit">Next</button>
     </form>
     <!-- RESULTS -->
     <form id="results">
-        <p>results</p>
+        <h2>Results:</h2>
     </form>
 
 </body>
