use one form to serve all questions with an array of strings

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <button type="submit">Next</button>
     </form>
     <!-- RESULTS -->
-    <form id="results">
+    <form id="q6">
         <h2>Results:</h2>
     </form>
 
