Clean up comments and work towards fixing bug

--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
     <!-- Question 1 -->
     <form id="q1">
         <h2>Question 1</h2>
-        <h3>Prompt?</h3>
+        <h3>What is your favorite color?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q1">
-        <label for="1">1</label>
+        <input type="radio" value="ruby" name="q1">
+        <label for="1">Red</label>
         <!-- radio 2 -->
-        <input type="radio" value="csharp" id="2" name="q1">
-        <label for="2">2</label>
+        <input type="radio" value="csharp" name="q1">
+        <label for="2">Green</label>
         <!-- radio 3 -->
-        <input type="radio" value="javaScript" id="3" name="q1">
-        <label for="3">3</label>
+        <input type="radio" value="javaScript" name="q1">
+        <label for="3">Blue</label>
         <!-- radio 4 -->
-        <input type="radio" value="go" id="4" name="q1">
-        <label for="4">4</label>
+        <input type="radio" value="go" name="q1">
+        <label for="4">Yellow</label>
         <!-- radio 5 -->
-        <input type="radio" value="python" id="5" name="q1">
-        <label for="5">5</label>
+        <input type="radio" value="python" Name="q1">
+        <label for="5">Purple</label>
         <!-- radio 6 -->
-        <input type="radio" value="rust" id="6" name="q1">
-        <label for="6">6</label>
+        <input type="radio" value="rust" name="q1">
+        <label for="6">Orange</label>
         <!-- radio 7 -->
-        <input type="radio" value="swift" id="7" name="q1">
-        <label for="7">7</label>
+        <input type="radio" value="swift" name="q1">
+        <label for="7">Pink</label>
         <button type="submit">Next</button>
     </form>
 
     <!-- Question 2 -->
     <form id="q2">
         <h2>Question 2</h2>
-        <h3>Prompt?</h3>
+        <h3>What month is your birthday in?</h3>
         <!-- radio 1 -->
         <input type="radio" value="ruby" id="1" name="q2">
         <label for="1">1</label>
