Develop way to rate which language is best for user

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
     <!-- RESULTS -->
     <form id="q6">
         <h2>Results:</h2>
+        <h3 span="first" id="first"></h3>
+        <h3 span="second" id="second"></h3>
+        <h3 span="third" id="third"></h3>
     </form>
 
 </body>
