--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en-US">
 
 <head>
-    <script src="js/jquery-3.5.1.js"></script>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        integrity="undefined" crossorigin="anonymous">
+    <!-- user styles -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!-- user scripts -->
     <script src="js/scripts.js"></script>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-
-    <div class="topnav">
-        <h1>&nbsp&nbsp&nbsp&nbspProgramming Language Suggestor.</h1>
-    </div>
-
 </head>
 
 <body class="background">
+    <div class="container">
     <!-- Question 0 (The Intro) -->
     <form id="intro" class="wide_content">
-        <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
+        <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for
+            you.</h2>
         <input type="submit" value="Next" class="button">
     </form>
 
@@ -180,7 +184,7 @@
         <br>
         <button type="submit" class="button">Retake Quiz</button>
     </form>
-
+</div>
 </body>
 
 </html>
