fix bug where user can submit undefined

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Question 1</h2>
         <h3>What is your favorite color?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" name="q1">
+        <input type="radio" value="ruby" name="q1" checked>
         <label for="1">Red</label>
         <!-- radio 2 -->
         <input type="radio" value="csharp" name="q1">
@@ -58,7 +58,7 @@
         <h2>Question 2</h2>
         <h3>What month is your birthday in?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q2">
+        <input type="radio" value="ruby" id="1" name="q2" checked>
         <label for="1">Jan-Feb</label>
         <!-- radio 2 -->
         <input type="radio" value="csharp" id="2" name="q2">
@@ -88,7 +88,7 @@
         <h2>Question 3</h2>
         <h3>What is the airspeed velocity of an unladen swallow?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q3">
+        <input type="radio" value="ruby" id="1" name="q3" checked>
         <label for="1">11 m/s</label>
         <!-- radio 2 -->
         <input type="radio" value="csharp" id="2" name="q3">
@@ -120,7 +120,7 @@
         <img src="math.png">
         <br>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q4">
+        <input type="radio" value="ruby" id="1" name="q4" checked>
         <label for="1">The lonliest number.</label>
         <!-- radio 2 -->
         <input type="radio" value="csharp" id="2" name="q4">
@@ -151,7 +151,7 @@
         <img src="beans.jpg">
         <h3>How many jelly beans in the jar?</h3>
         <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q5">
+        <input type="radio" value="ruby" id="1" name="q5" checked>
         <label for="1">1</label>
         <!-- radio 2 -->
         <input type="radio" value="csharp" id="2" name="q5">
