--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+    <title>Language Suggestor</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
         integrity="undefined" crossorigin="anonymous">
@@ -16,175 +17,176 @@
 
 <body class="background">
     <div class="container">
-    <!-- Question 0 (The Intro) -->
-    <form id="intro" class="wide_content">
-        <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for
-            you.</h2>
-        <input type="submit" value="Next" class="button">
-    </form>
+        <!-- Question 0 (The Intro) -->
+        <form id="intro">
+            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language
+                for
+                you.</h2>
+            <input type="submit" value="Next" class="button">
+        </form>
 
-    <!-- Question 1 -->
-    <form id="q1" class="wide_content">
-        <h2>Question 1</h2>
-        <h3>What is your favorite color?</h3>
-        <!-- radio 1 -->
-        <input type="radio" value="ruby" name="q1" checked>
-        <label for="1">Red</label>
-        <!-- radio 2 -->
-        <input type="radio" value="csharp" name="q1">
-        <label for="2">Green</label>
-        <!-- radio 3 -->
-        <input type="radio" value="javaScript" name="q1">
-        <label for="3">Blue</label>
-        <!-- radio 4 -->
-        <input type="radio" value="go" name="q1">
-        <label for="4">Yellow</label>
-        <!-- radio 5 -->
-        <input type="radio" value="python" Name="q1">
-        <label for="5">Purple</label>
-        <!-- radio 6 -->
-        <input type="radio" value="rust" name="q1">
-        <label for="6">Orange</label>
-        <!-- radio 7 -->
-        <input type="radio" value="swift" name="q1">
-        <label for="7">Pink</label>
-        <br>
-        <br>
-        <button type="submit" class="button">Next</button>
-    </form>
+        <!-- Question 1 -->
+        <form id="q1">
+            <h2>Question 1</h2>
+            <h3>What is your favorite color?</h3>
+            <!-- radio 1 -->
+            <input type="radio" value="ruby" name="q1" checked>
+            <label for="1">Red</label>
+            <!-- radio 2 -->
+            <input type="radio" value="csharp" name="q1">
+            <label for="2">Green</label>
+            <!-- radio 3 -->
+            <input type="radio" value="javaScript" name="q1">
+            <label for="3">Blue</label>
+            <!-- radio 4 -->
+            <input type="radio" value="go" name="q1">
+            <label for="4">Yellow</label>
+            <!-- radio 5 -->
+            <input type="radio" value="python" Name="q1">
+            <label for="5">Purple</label>
+            <!-- radio 6 -->
+            <input type="radio" value="rust" name="q1">
+            <label for="6">Orange</label>
+            <!-- radio 7 -->
+            <input type="radio" value="swift" name="q1">
+            <label for="7">Pink</label>
+            <br>
+            <br>
+            <button type="submit" class="button">Next</button>
+        </form>
 
-    <!-- Question 2 -->
-    <form id="q2" class="wide_content">
-        <h2>Question 2</h2>
-        <h3>What month is your birthday in?</h3>
-        <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q2" checked>
-        <label for="1">Jan-Feb</label>
-        <!-- radio 2 -->
-        <input type="radio" value="csharp" id="2" name="q2">
-        <label for="2">Mar-Apr</label>
-        <!-- radio 3 -->
-        <input type="radio" value="javaScript" id="3" name="q2">
-        <label for="3">May-Jun</label>
-        <!-- radio 4 -->
-        <input type="radio" value="go" id="4" name="q2">
-        <label for="4">Jul-Aug</label>
-        <!-- radio 5 -->
-        <input type="radio" value="python" id="5" name="q2">
-        <label for="5">Sep-Oct</label>
-        <!-- radio 6 -->
-        <input type="radio" value="rust" id="6" name="q2">
-        <label for="6">Nov-Dec</label>
-        <!-- radio 7 -->
-        <input type="radio" value="swift" id="7" name="q2">
-        <label for="7">I haven't been born yet.</label>
-        <br>
-        <br>
-        <button type="submit" class="button">Next</button>
-    </form>
+        <!-- Question 2 -->
+        <form id="q2">
+            <h2>Question 2</h2>
+            <h3>What month is your birthday in?</h3>
+            <!-- radio 1 -->
+            <input type="radio" value="ruby" id="1" name="q2" checked>
+            <label for="1">Jan-Feb</label>
+            <!-- radio 2 -->
+            <input type="radio" value="csharp" id="2" name="q2">
+            <label for="2">Mar-Apr</label>
+            <!-- radio 3 -->
+            <input type="radio" value="javaScript" id="3" name="q2">
+            <label for="3">May-Jun</label>
+            <!-- radio 4 -->
+            <input type="radio" value="go" id="4" name="q2">
+            <label for="4">Jul-Aug</label>
+            <!-- radio 5 -->
+            <input type="radio" value="python" id="5" name="q2">
+            <label for="5">Sep-Oct</label>
+            <!-- radio 6 -->
+            <input type="radio" value="rust" id="6" name="q2">
+            <label for="6">Nov-Dec</label>
+            <!-- radio 7 -->
+            <input type="radio" value="swift" id="7" name="q2">
+            <label for="7">I haven't been born yet.</label>
+            <br>
+            <br>
+            <button type="submit" class="button">Next</button>
+        </form>
 
-    <!-- Question 3 -->
-    <form id="q3" class="wide_content">
-        <h2>Question 3</h2>
-        <h3>What is the airspeed velocity of an unladen swallow?</h3>
-        <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q3" checked>
-        <label for="1">11 m/s</label>
-        <!-- radio 2 -->
-        <input type="radio" value="csharp" id="2" name="q3">
-        <label for="2">12 m/s</label>
-        <!-- radio 3 -->
-        <input type="radio" value="javaScript" id="3" name="q3">
-        <label for="3">299,792,458 m/s</label>
-        <!-- radio 4 -->
-        <input type="radio" value="go" id="4" name="q3">
-        <label for="4">343 m/s</label>
-        <!-- radio 5 -->
-        <input type="radio" value="python" id="5" name="q3">
-        <label for="5">9 m/s</label>
-        <!-- radio 6 -->
-        <input type="radio" value="rust" id="6" name="q3">
-        <label for="6">∞... It's on the autobahn</label>
-        <!-- radio 7 -->
-        <input type="radio" value="swift" id="7" name="q3">
-        <label for="7">¯\_(ツ)_/¯</label>
-        <br>
-        <br>
-        <button type="submit" class="button">Next</button>
-    </form>
+        <!-- Question 3 -->
+        <form id="q3">
+            <h2>Question 3</h2>
+            <h3>What is the airspeed velocity of an unladen swallow?</h3>
+            <!-- radio 1 -->
+            <input type="radio" value="ruby" id="1" name="q3" checked>
+            <label for="1">11 m/s</label>
+            <!-- radio 2 -->
+            <input type="radio" value="csharp" id="2" name="q3">
+            <label for="2">12 m/s</label>
+            <!-- radio 3 -->
+            <input type="radio" value="javaScript" id="3" name="q3">
+            <label for="3">299,792,458 m/s</label>
+            <!-- radio 4 -->
+            <input type="radio" value="go" id="4" name="q3">
+            <label for="4">343 m/s</label>
+            <!-- radio 5 -->
+            <input type="radio" value="python" id="5" name="q3">
+            <label for="5">9 m/s</label>
+            <!-- radio 6 -->
+            <input type="radio" value="rust" id="6" name="q3">
+            <label for="6">∞... It's on the autobahn</label>
+            <!-- radio 7 -->
+            <input type="radio" value="swift" id="7" name="q3">
+            <label for="7">¯\_(ツ)_/¯</label>
+            <br>
+            <br>
+            <button type="submit" class="button">Next</button>
+        </form>
 
-    <!-- Question 4 -->
-    <form id="q4" class="wide_content">
-        <h2>Question 4</h2>
-        <h3>Solve for γ:</h3>
-        <img src="math.png">
-        <br>
-        <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q4" checked>
-        <label for="1">The lonliest number.</label>
-        <!-- radio 2 -->
-        <input type="radio" value="csharp" id="2" name="q4">
-        <label for="2">42</label>
-        <!-- radio 3 -->
-        <input type="radio" value="javaScript" id="3" name="q4">
-        <label for="3">"wibbly wobbly timey wimey"</label>
-        <!-- radio 4 -->
-        <input type="radio" value="go" id="4" name="q4">
-        <label for="4">Can't divide by 0</label>
-        <!-- radio 5 -->
-        <input type="radio" value="python" id="5" name="q4">
-        <label for="5">"Fus Ro Dah"</label>
-        <!-- radio 6 -->
-        <input type="radio" value="rust" id="6" name="q4">
-        <label for="6">Roll for intelligence</label>
-        <!-- radio 7 -->
-        <input type="radio" value="swift" id="7" name="q4">
-        <label for="7">Yes</label>
-        <br>
-        <br>
-        <button type="submit" class="button">Next</button>
-    </form>
+        <!-- Question 4 -->
+        <form id="q4">
+            <h2>Question 4</h2>
+            <h3>Solve for γ:</h3>
+            <img src="math.png">
+            <br>
+            <!-- radio 1 -->
+            <input type="radio" value="ruby" id="1" name="q4" checked>
+            <label for="1">The lonliest number.</label>
+            <!-- radio 2 -->
+            <input type="radio" value="csharp" id="2" name="q4">
+            <label for="2">42</label>
+            <!-- radio 3 -->
+            <input type="radio" value="javaScript" id="3" name="q4">
+            <label for="3">"wibbly wobbly timey wimey"</label>
+            <!-- radio 4 -->
+            <input type="radio" value="go" id="4" name="q4">
+            <label for="4">Can't divide by 0</label>
+            <!-- radio 5 -->
+            <input type="radio" value="python" id="5" name="q4">
+            <label for="5">"Fus Ro Dah"</label>
+            <!-- radio 6 -->
+            <input type="radio" value="rust" id="6" name="q4">
+            <label for="6">Roll for intelligence</label>
+            <!-- radio 7 -->
+            <input type="radio" value="swift" id="7" name="q4">
+            <label for="7">Yes</label>
+            <br>
+            <br>
+            <button type="submit" class="button">Next</button>
+        </form>
 
-    <!-- Question 5 -->
-    <form id="q5" class="wide_content">
-        <h2>Question 5</h2>
-        <img src="beans.jpg">
-        <h3>How many jelly beans in the jar?</h3>
-        <!-- radio 1 -->
-        <input type="radio" value="ruby" id="1" name="q5" checked>
-        <label for="1">1</label>
-        <!-- radio 2 -->
-        <input type="radio" value="csharp" id="2" name="q5">
-        <label for="2">42</label>
-        <!-- radio 3 -->
-        <input type="radio" value="javaScript" id="3" name="q5">
-        <label for="3">87435</label>
-        <!-- radio 4 -->
-        <input type="radio" value="go" id="4" name="q5">
-        <label for="4">6</label>
-        <!-- radio 5 -->
-        <input type="radio" value="python" id="5" name="q5">
-        <label for="5">97</label>
-        <!-- radio 6 -->
-        <input type="radio" value="rust" id="6" name="q5">
-        <label for="6">621287</label>
-        <!-- radio 7 -->
-        <input type="radio" value="swift" id="7" name="q5">
-        <label for="7">0</label>
-        <br>
-        <br>
-        <button type="submit" class="button">Next</button>
-    </form>
-    <!-- RESULTS -->
-    <form id="q6" class="wide_content">
-        <h2>Your top recommended programming languages:</h2>
-        <h3 span="first" id="first"></h3>
-        <h3 span="second" id="second"></h3>
-        <h3 span="third" id="third"></h3>
-        <br>
-        <button type="submit" class="button">Retake Quiz</button>
-    </form>
-</div>
+        <!-- Question 5 -->
+        <form id="q5">
+            <h2>Question 5</h2>
+            <img src="beans.jpg">
+            <h3>How many jelly beans in the jar?</h3>
+            <!-- radio 1 -->
+            <input type="radio" value="ruby" id="1" name="q5" checked>
+            <label for="1">1</label>
+            <!-- radio 2 -->
+            <input type="radio" value="csharp" id="2" name="q5">
+            <label for="2">42</label>
+            <!-- radio 3 -->
+            <input type="radio" value="javaScript" id="3" name="q5">
+            <label for="3">87435</label>
+            <!-- radio 4 -->
+            <input type="radio" value="go" id="4" name="q5">
+            <label for="4">6</label>
+            <!-- radio 5 -->
+            <input type="radio" value="python" id="5" name="q5">
+            <label for="5">97</label>
+            <!-- radio 6 -->
+            <input type="radio" value="rust" id="6" name="q5">
+            <label for="6">621287</label>
+            <!-- radio 7 -->
+            <input type="radio" value="swift" id="7" name="q5">
+            <label for="7">0</label>
+            <br>
+            <br>
+            <button type="submit" class="button">Next</button>
+        </form>
+        <!-- RESULTS -->
+        <form id="q6">
+            <h2>Your top recommended programming languages:</h2>
+            <h3 span="first" id="first"></h3>
+            <h3 span="second" id="second"></h3>
+            <h3 span="third" id="third"></h3>
+            <br>
+            <button type="submit" class="button">Retake Quiz</button>
+        </form>
+    </div>
 </body>
 
 </html>
