--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <title>Language Suggestor</title>
+    <!-- set favicon to an emoji -->
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤖</text></svg>">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
         integrity="undefined" crossorigin="anonymous">
@@ -19,10 +22,10 @@
     <div class="container">
         <!-- Question 0 (The Intro) -->
         <form id="intro">
-            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language
-                for
-                you.</h2>
-            <input type="submit" value="Next" class="button">
+            <h1 class="display-1">Language Suggestor</h1>
+            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
+            <br>
+            <button type="submit" class="btn btn-outline-danger btn-lg">Next</button>
         </form>
 
         <!-- Question 1 -->
@@ -52,7 +55,7 @@
             <label for="7">Pink</label>
             <br>
             <br>
-            <button type="submit" class="button">Next</button>
+            <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
 
         <!-- Question 2 -->
@@ -82,7 +85,7 @@
             <label for="7">I haven't been born yet.</label>
             <br>
             <br>
-            <button type="submit" class="button">Next</button>
+            <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
 
         <!-- Question 3 -->
@@ -112,7 +115,7 @@
             <label for="7">¯\_(ツ)_/¯</label>
             <br>
             <br>
-            <button type="submit" class="button">Next</button>
+            <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
 
         <!-- Question 4 -->
@@ -144,7 +147,7 @@
             <label for="7">Yes</label>
             <br>
             <br>
-            <button type="submit" class="button">Next</button>
+            <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
 
         <!-- Question 5 -->
@@ -175,7 +178,7 @@
             <label for="7">0</label>
             <br>
             <br>
-            <button type="submit" class="button">Next</button>
+            <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
         <!-- RESULTS -->
         <form id="q6">
@@ -184,7 +187,7 @@
             <h3 span="second" id="second"></h3>
             <h3 span="third" id="third"></h3>
             <br>
-            <button type="submit" class="button">Retake Quiz</button>
+            <button type="submit" class="btn btn-outline-danger btn-lg">Retake Quiz</button>
         </form>
     </div>
 </body>
