--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="container">
         <!-- Question 0 (The Intro) -->
         <form id="intro">
-            <h1 class="display-1">Language Suggestor</h1>
-            <h2>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language for you.</h2>
+            <h1 class="display-1"><em>//Language Suggestor</em></h1>
+            <h3>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language.</h3>
             <br>
             <button type="submit" class="btn btn-outline-danger btn-lg">Next</button>
         </form>
@@ -33,28 +33,29 @@
             <h2>Question 1</h2>
             <h3>What is your favorite color?</h3>
             <!-- radio 1 -->
-            <input type="radio" value="ruby" name="q1" checked>
+            <input class="form-check-input" type="radio" value="ruby" name="q1" checked>
             <label for="1">Red</label>
             <!-- radio 2 -->
-            <input type="radio" value="csharp" name="q1">
+            <input class="form-check-input" type="radio" value="csharp" name="q1">
             <label for="2">Green</label>
             <!-- radio 3 -->
-            <input type="radio" value="javaScript" name="q1">
+            <input class="form-check-input" type="radio" value="javaScript" name="q1">
             <label for="3">Blue</label>
             <!-- radio 4 -->
-            <input type="radio" value="go" name="q1">
+            <input class="form-check-input" type="radio" value="go" name="q1">
             <label for="4">Yellow</label>
             <!-- radio 5 -->
-            <input type="radio" value="python" Name="q1">
+            <input class="form-check-input" type="radio" value="python" Name="q1">
             <label for="5">Purple</label>
             <!-- radio 6 -->
-            <input type="radio" value="rust" name="q1">
+            <input class="form-check-input" type="radio" value="rust" name="q1">
             <label for="6">Orange</label>
             <!-- radio 7 -->
-            <input type="radio" value="swift" name="q1">
+            <input class="form-check-input" type="radio" value="swift" name="q1">
             <label for="7">Pink</label>
             <br>
             <br>
+
             <button type="submit" class="btn btn-outline-danger btn">Next</button>
         </form>
 
@@ -63,25 +64,25 @@
             <h2>Question 2</h2>
             <h3>What month is your birthday in?</h3>
             <!-- radio 1 -->
-            <input type="radio" value="ruby" id="1" name="q2" checked>
+            <input class="form-check-input" type="radio" value="ruby" id="1" name="q2" checked>
             <label for="1">Jan-Feb</label>
             <!-- radio 2 -->
-            <input type="radio" value="csharp" id="2" name="q2">
+            <input class="form-check-input" type="radio" value="csharp" id="2" name="q2">
             <label for="2">Mar-Apr</label>
             <!-- radio 3 -->
-            <input type="radio" value="javaScript" id="3" name="q2">
+            <input class="form-check-input" type="radio" value="javaScript" id="3" name="q2">
             <label for="3">May-Jun</label>
             <!-- radio 4 -->
-            <input type="radio" value="go" id="4" name="q2">
+            <input class="form-check-input" type="radio" value="go" id="4" name="q2">
             <label for="4">Jul-Aug</label>
             <!-- radio 5 -->
-            <input type="radio" value="python" id="5" name="q2">
+            <input class="form-check-input" type="radio" value="python" id="5" name="q2">
             <label for="5">Sep-Oct</label>
             <!-- radio 6 -->
-            <input type="radio" value="rust" id="6" name="q2">
+            <input class="form-check-input" type="radio" value="rust" id="6" name="q2">
             <label for="6">Nov-Dec</label>
             <!-- radio 7 -->
-            <input type="radio" value="swift" id="7" name="q2">
+            <input class="form-check-input" type="radio" value="swift" id="7" name="q2">
             <label for="7">I haven't been born yet.</label>
             <br>
             <br>
@@ -93,25 +94,25 @@
             <h2>Question 3</h2>
             <h3>What is the airspeed velocity of an unladen swallow?</h3>
             <!-- radio 1 -->
-            <input type="radio" value="ruby" id="1" name="q3" checked>
+            <input class="form-check-input" type="radio" value="ruby" id="1" name="q3" checked>
             <label for="1">11 m/s</label>
             <!-- radio 2 -->
-            <input type="radio" value="csharp" id="2" name="q3">
+            <input class="form-check-input" type="radio" value="csharp" id="2" name="q3">
             <label for="2">12 m/s</label>
             <!-- radio 3 -->
-            <input type="radio" value="javaScript" id="3" name="q3">
+            <input class="form-check-input" type="radio" value="javaScript" id="3" name="q3">
             <label for="3">299,792,458 m/s</label>
             <!-- radio 4 -->
-            <input type="radio" value="go" id="4" name="q3">
+            <input class="form-check-input" type="radio" value="go" id="4" name="q3">
             <label for="4">343 m/s</label>
             <!-- radio 5 -->
-            <input type="radio" value="python" id="5" name="q3">
+            <input class="form-check-input" type="radio" value="python" id="5" name="q3">
             <label for="5">9 m/s</label>
             <!-- radio 6 -->
-            <input type="radio" value="rust" id="6" name="q3">
+            <input class="form-check-input" type="radio" value="rust" id="6" name="q3">
             <label for="6">∞... It's on the autobahn</label>
             <!-- radio 7 -->
-            <input type="radio" value="swift" id="7" name="q3">
+            <input class="form-check-input" type="radio" value="swift" id="7" name="q3">
             <label for="7">¯\_(ツ)_/¯</label>
             <br>
             <br>
@@ -125,25 +126,25 @@
             <img src="math.png">
             <br>
             <!-- radio 1 -->
-            <input type="radio" value="ruby" id="1" name="q4" checked>
+            <input class="form-check-input" type="radio" value="ruby" id="1" name="q4" checked>
             <label for="1">The lonliest number.</label>
             <!-- radio 2 -->
-            <input type="radio" value="csharp" id="2" name="q4">
+            <input class="form-check-input" type="radio" value="csharp" id="2" name="q4">
             <label for="2">42</label>
             <!-- radio 3 -->
-            <input type="radio" value="javaScript" id="3" name="q4">
+            <input class="form-check-input" type="radio" value="javaScript" id="3" name="q4">
             <label for="3">"wibbly wobbly timey wimey"</label>
             <!-- radio 4 -->
-            <input type="radio" value="go" id="4" name="q4">
+            <input class="form-check-input" type="radio" value="go" id="4" name="q4">
             <label for="4">Can't divide by 0</label>
             <!-- radio 5 -->
-            <input type="radio" value="python" id="5" name="q4">
+            <input class="form-check-input" type="radio" value="python" id="5" name="q4">
             <label for="5">"Fus Ro Dah"</label>
             <!-- radio 6 -->
-            <input type="radio" value="rust" id="6" name="q4">
+            <input class="form-check-input" type="radio" value="rust" id="6" name="q4">
             <label for="6">Roll for intelligence</label>
             <!-- radio 7 -->
-            <input type="radio" value="swift" id="7" name="q4">
+            <input class="form-check-input" type="radio" value="swift" id="7" name="q4">
             <label for="7">Yes</label>
             <br>
             <br>
@@ -156,25 +157,25 @@
             <img src="beans.jpg">
             <h3>How many jelly beans in the jar?</h3>
             <!-- radio 1 -->
-            <input type="radio" value="ruby" id="1" name="q5" checked>
+            <input class="form-check-input" type="radio" value="ruby" id="1" name="q5" checked>
             <label for="1">1</label>
             <!-- radio 2 -->
-            <input type="radio" value="csharp" id="2" name="q5">
+            <input class="form-check-input" type="radio" value="csharp" id="2" name="q5">
             <label for="2">42</label>
             <!-- radio 3 -->
-            <input type="radio" value="javaScript" id="3" name="q5">
+            <input class="form-check-input" type="radio" value="javaScript" id="3" name="q5">
             <label for="3">87435</label>
             <!-- radio 4 -->
-            <input type="radio" value="go" id="4" name="q5">
+            <input class="form-check-input" type="radio" value="go" id="4" name="q5">
             <label for="4">6</label>
             <!-- radio 5 -->
-            <input type="radio" value="python" id="5" name="q5">
+            <input class="form-check-input" type="radio" value="python" id="5" name="q5">
             <label for="5">97</label>
             <!-- radio 6 -->
-            <input type="radio" value="rust" id="6" name="q5">
+            <input class="form-check-input" type="radio" value="rust" id="6" name="q5">
             <label for="6">621287</label>
             <!-- radio 7 -->
-            <input type="radio" value="swift" id="7" name="q5">
+            <input class="form-check-input" type="radio" value="swift" id="7" name="q5">
             <label for="7">0</label>
             <br>
             <br>
