--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Language Suggestor</title>
+    <title>Language Suggester</title>
     <!-- set favicon to an emoji -->
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤖</text></svg>">
@@ -22,7 +22,7 @@
     <div class="container">
         <!-- Question 0 (The Intro) -->
         <form id="intro">
-            <h1 class="display-1">Language Suggestor</h1>
+            <h1 class="display-1">Language Suggester</h1>
             <h3>This is a quiz that will ask you <em>simple</em> questions to recommend the best programming language.</h3>
             <br>
             <h4>First off, what's your name?</h4>
